--- a/style.css
+++ b/style.css
@@ -7,32 +7,35 @@
   --bg-citoyens: #33c1ff;
   --bg-municipalite: rgb(40, 167, 69);
   --bg-entreprises: rgb(255, 193, 7);
-  font-family: 'Krona One', sans-serif;
-
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
+
 header {
   background-color: var(--primary-color);
   font-size: x-large;
+
 }
 
 .navbar-brand {
-  margin-top: -2%;
-
+  margin-top: -3%;
 }
-.nav-link{ 
-  text-shadow: #333333 0px 0.5px 0.5px;
-  margin: auto;
-  padding: 5px;
- color: var(--accent-color);
+
+
+.nav-item a {
+  color: var(--accent-color);
+  text-shadow: #333333 5px 5px 5px;
 }
 
 .nav-link:hover {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   transition: 0.3s;
- }
- .carousel-item {
+}
+
+.carousel-item {
   height: 800px;
- }
+}
 
 .loisirs {
   font-size: 4rem;
@@ -46,7 +49,7 @@ header {
 
 
 .citoyens {
-    font-size: 4rem;
+  font-size: 4rem;
   background-color: rgba(51, 194, 255, 0.5);
   color: var(--text-color);
   text-align: left;
@@ -57,7 +60,7 @@ header {
 
 .municipalite {
   font-size: 4rem;
-  background-color: rgb(40, 167, 69,0.5);
+  background-color: rgb(40, 167, 69, 0.5);
   text-align: left;
   padding: 10px;
   width: 800px;
@@ -66,11 +69,18 @@ header {
 
 .entreprises {
   font-size: 4rem;
-  background-color: rgb(255, 193, 7,0.5);
+  background-color: rgb(255, 193, 7, 0.5);
   text-align: left;
   padding: 10px;
   width: 900px;
   height: 100px;
+}
+
+h2 {
+  color: var(--text-color);
+  text-shadow: #333333 1px 1px 2px;
+  font-size: 3rem;
+  margin-bottom: 20px;
 }
 
 footer {
