--- a/style.css
+++ b/style.css
@@ -3,11 +3,10 @@
   --secondary-color: #007bff;
   --text-color: #333333;
   --accent-color: rgb(248, 249, 250);
-  --bg-loisirs: rgba(255, 88, 51, 0.941);
+  --bg-loisirs: rgb(248, 132, 65);
   --bg-citoyens: #33c1ff;
   --bg-municipalite: rgb(40, 167, 69);
   --bg-entreprises: rgb(255, 193, 7);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
@@ -15,17 +14,20 @@
 header {
   background-color: var(--primary-color);
   font-size: x-large;
-
+  color: var(--accent-color);
+  margin: 0;
 }
 
+
 .navbar-brand {
-  margin-top: -3%;
+  margin-top: -4%;
 }
 
 
 .nav-item a {
   color: var(--accent-color);
   text-shadow: #333333 5px 5px 5px;
+  padding: 0 30px;
 }
 
 .nav-link:hover {
@@ -81,6 +83,7 @@ h2 {
   text-shadow: #333333 1px 1px 2px;
   font-size: 3rem;
   margin-bottom: 20px;
+  background-color: var(--bg-loisirs);
 }
 
 footer {
@@ -88,4 +91,9 @@ footer {
   padding: 10px;
   bottom: 0;
   width: 100%;
+}
+
+.page-loisirs header {
+  background-color: var(--bg-loisirs);
+
 }
