--- a/style.css
+++ b/style.css
@@ -1,89 +1,68 @@
 :root {
-  --primary-color: rgb(0, 92, 169);
-  --secondary-color: #007bff;
+  --header-bg: #1a589b;
   --text-color: #333333;
   --accent-color: rgb(248, 249, 250);
-  --bg-loisirs: rgb(248, 132, 65);
+  --bg-loisirs: rgba(248, 132, 65, 0.592);
   --bg-citoyens: #33c1ff;
   --bg-municipalite: rgb(40, 167, 69);
   --bg-entreprises: rgb(255, 193, 7);
+  --font-body: krona-one-regular, sans-serif;
+}
+
+.krona-one-regular {
+  font-family: "Krona One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 
+.jetbrains-mono{
+  font-family: "JetBrains Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 200 700;
+  font-style: normal;
+}
+
+body {
+  background-color: var(--accent-color);
+  color: var(--text-color);
+  font-family: var(--font-body);
+  margin: 0;
+  padding: 0;
+}
 
 header {
-  background-color: var(--primary-color);
-  font-size: x-large;
-  color: var(--accent-color);
-  margin: 0;
+  position: relative;
+  background-color: var(--header-bg);
 }
 
-
-.navbar-brand {
-  margin-top: -4%;
+ .navbar-brand {
+  position: absolute;
+  margin-top: 70px;
+  margin-left: 50px;
 }
 
-
-.nav-item a {
-  color: var(--accent-color);
-  text-shadow: #333333 5px 5px 5px;
-  padding: 0 30px;
-}
-
-.nav-link:hover {
-  font-size: 1.4rem;
-  transition: 0.3s;
-}
 
 .carousel-item {
-  height: 800px;
+  height: 500px;
+}
+.carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+  object-fit: cover;
+  z-index: -1;
 }
 
-.loisirs {
-  font-size: 4rem;
-  background-color: rgba(255, 88, 51, 0.5);
-  border-radius: 5px;
-  text-align: left;
-  padding: 10px;
-  width: 600px;
-  height: 100px;
-}
 
 
-.citoyens {
-  font-size: 4rem;
-  background-color: rgba(51, 194, 255, 0.5);
-  color: var(--text-color);
-  text-align: left;
-  padding: 10px;
-  width: 700px;
-  height: 100px;
-}
+.nav-scroller {
+  background-color: var(--accent-color);
+  border-bottom: solid 1px var(--header-bg);
+  font-weight: 200;
 
-.municipalite {
-  font-size: 4rem;
-  background-color: rgb(40, 167, 69, 0.5);
-  text-align: left;
-  padding: 10px;
-  width: 800px;
-  height: 100px;
-}
-
-.entreprises {
-  font-size: 4rem;
-  background-color: rgb(255, 193, 7, 0.5);
-  text-align: left;
-  padding: 10px;
-  width: 900px;
-  height: 100px;
-}
-
-h2 {
-  color: var(--text-color);
-  text-shadow: #333333 1px 1px 2px;
-  font-size: 3rem;
-  margin-bottom: 20px;
-  background-color: var(--bg-loisirs);
 }
 
 footer {
@@ -93,7 +72,3 @@ footer {
   width: 100%;
 }
 
-.page-loisirs header {
-  background-color: var(--bg-loisirs);
-
-}
