--- a/style.css
+++ b/style.css
@@ -4,10 +4,12 @@
   --accent-color: rgb(248, 249, 250);
   --bg-loisirs: rgba(248, 132, 65, 0.592);
   --bg-citoyens: #33c1ff;
-  --bg-municipalite: rgb(40, 167, 69);
+  --bg-municipalite: rgb(212, 109, 30);
   --bg-entreprises: rgb(255, 193, 7);
   --font-body: krona-one-regular, sans-serif;
   --font-title: jetbrains-mono, monospace;
+  --bg-btn-primary: #ff4005;
+  --btn-primary-bg-hover: #146f2b;
 }
 
 .krona-one-regular {
@@ -39,6 +41,13 @@ header {
   position: relative;
   background-color: var(--header-bg);
 }
+.municipalite {
+  background-color: var(--bg-municipalite);  }
+
+
+.bg-body-hotel-de-ville {
+box-shadow: var(--bg-municipalite) 0px 4px 6px 1px, var(--bg-municipalite) 0px 2px 4px 1px;
+}
 
  .navbar-brand {
   position: absolute;
@@ -66,13 +75,11 @@ header {
   background-color: var(--accent-color);
   border-bottom: solid 1px var(--header-bg);
   font-weight: 200;
-
 }
 
+
 footer {
-  background-color: var(--primary-color);
-  padding: 10px;
-  bottom: 0;
+  background-color: var(--header-bg);
   width: 100%;
 }
 
