--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   --header-bg: #1a589b;
   --text-color: #333333;
   --accent-color: rgb(248, 249, 250);
-  --bg-loisirs: rgba(248, 132, 65, 0.592);
+  --bg-loisirs: rgb(20, 121, 64);
   --bg-citoyens: #33c1ff;
   --bg-municipalite: rgb(212, 109, 30);
   --bg-entreprises: rgb(255, 193, 7);
@@ -46,9 +46,15 @@ header {
 
 
 .bg-body-hotel-de-ville {
-box-shadow: var(--bg-municipalite) 0px 4px 6px 1px, var(--bg-municipalite) 0px 2px 4px 1px;
+box-shadow: var(--bg-municipalite) 0px 4px 6px 1px, var(--bg-municipalite) 20px 5px 4px 4px;
+}
+.bg-header-loisirs {
+background-color: var(--bg-loisirs);
 }
 
+.bg-body-loisirs {
+box-shadow: var(--bg-loisirs) 0px 4px 6px 1px, var(--bg-loisirs) 0px 2px 4px 1px; 
+ }
  .navbar-brand {
   position: absolute;
   margin-top: 70px;
@@ -56,19 +62,19 @@ box-shadow: var(--bg-municipalite) 0px 4px 6px 1px, var(--bg-municipalite) 0px 2
 }
 
 
-.carousel-item {
-  height: 500px;
+.carousel-accueil .carousel-item {
+  height:750px;
 }
-.carousel-item img {
+
+.carousel-accueil .carousel-item img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: 750px;
   object-fit: cover;
   z-index: -1;
 }
-
 
 
 .nav-scroller {
