--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
     --text-color: #333333;
     --accent-color: rgb(248, 249, 250);
     --bg-loisirs: rgb(35, 60, 14);
-    --bg-citoyens: #33c1ff;
-    --bg-municipalite: rgb(205, 138, 87);
+    --bg-hover: #0289ff;
+    --bg-municipalite: rgb(210, 91, 0);
     --bg-ville: rgb(7, 17, 83);
     --font-body: krona-one-regular, sans-serif;
     --font-title: jetbrains-mono, monospace;
-    --bg-btn-primary: #ff4005;
+   
     --btn-primary-bg-hover: #146f2b;
   }
 
@@ -45,11 +45,12 @@
   }
 
   header .nav-link:hover {
-    color: var(--bg-citoyens);
+    color: var(--bg-hover);
+ 
   }
 
   .lien-header :hover {
-    color: var(--bg-citoyens);
+    color: var(--bg-hover);
   }
 
 
